fixed users orders table not showing correctly on mobile

--- a/static/css/users_orders.css
+++ b/static/css/users_orders.css
@@ -6,10 +6,14 @@
     font-family: 'Hammersmith', sans-serif;
 }
 
+th, td {
+    font-size: 10pt;
+}
+
 td.entries-row {
     border: none;
     font-family: 'Roboto', sans-serif;
-    font-size: 10.5pt;
+    font-size: 8.5pt;
 }
 
 .current {
@@ -23,4 +27,22 @@ td.entries-row {
 
 .fas:hover {
     color: rgba(0, 0, 0, 1);
+}
+
+.order-table {
+    padding: 0;
+}
+
+@media (min-width: 768px) {
+    .order-table {
+        padding: 15px;
+    }
+
+    th, td {
+        font-size: 12pt;
+    }
+
+    td.entries-row {
+        font-size: 10.5pt;
+    }
 }
